# rknpu

./: .uboot.toml  Cargo.toml  README.md
src/: device.rs  err.rs  gem.rs  hal.rs  ioctrl.rs  job.rs  lib.rs  memory.rs  osal.rs
src/config/: mod.rs
src/registers/: cna.rs  consts.rs  core.rs  ddma.rs  dpu.rs  dpu_rdma.rs  global.rs  int.rs  mod.rs  pc.rs  ppu.rs  ppu_rdma.rs  sdma.rs
src/task/: def.rs  mod.rs
src/task/op/: matmul.rs
tests/: test.rs
