[package]
edition = "2024"
name = "rknpu"
version = "0.1.0"

[dependencies]
dma-api = {version = "0.5", features = ["alloc"]}
log = "0.4"
mbarrier = "0.1"
tock-registers = "0.10"
thiserror = {version = "2.0", default-features = false}
aarch64-cpu-ext = "0.1"

[dev-dependencies]
bare-test = "0.7"
rockchip-pm = {git = "https://github.com/drivercraft/rockchip-pm"}


[build-dependencies]
bare-test-macros = "0.2"

[[test]]
harness = false
name = "test"
